# jsonschema-model

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  jsonschema_model.py  setup.cfg  setup.py  test_jsonschema_model.py  tox.ini
