[wheel]
universal = 1

[metadata]
name = jsonschema-model
author = Philippe Pepiot
author-email = phil@philpep.org
summary = Json schema Model
home-page = https://github.com/philpep/jsonschema-model

[pytest]
norecursedirs = .tox .git *.egg build .local

[flake8]
ignore = H802,H301,H101,H306,H302,H904,H305,E226,H405,E123,H236
exclude = .tox,build,*.egg
